--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,29 +9,29 @@
         rel="stylesheet" href="{{ "css/user.css" | absURL }}"/>
     <meta name="viewport" content="width=device-width">
     <title>{{ if .IsHome }}{{ else }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
-    <!-- OGP -->
+<!-- OGP -->
     <meta property="og:url" content="{{ .URL | absURL }}"/>
     <meta property="og:site_name" content="{{ .Site.Title }}"/>
-    {{ if .IsHome }}
+    {{- if .IsHome }}
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{ .Site.Title }}" />
     <meta property="og:description" content="{{ .Site.Params.Description }}"/>
     <meta property="og:image" content="{{ $.Site.Params.avatar }}"/>
     <meta name="description" content="{{ .Site.Params.Description }}"/>
-    {{ else }}
+    {{- else }}
     <meta property="og:type" content="article" />
     <meta property="og:title" content="{{ .Title }}" />
     <meta property="og:description" content="{{ .Params.Description }}"/>
     <meta name="description" content="{{ .Params.Description }}"/>
-    {{ with .Params.Keyword }}
+    {{- with .Params.Keyword }}
     <meta name="keywords" content="{{ . }}"/>
-    {{ end }}
-    {{ end }}
+    {{- end }}
+    {{- end }}
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href="{{ "images/favicon.ico" | absURL }}">
     <meta name="theme-color" content="#1e2327">
 
-    {{ if not .Site.IsServer }}
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    {{- if not .Site.IsServer }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -41,5 +41,5 @@
     gtag('config', '{{ .Site.GoogleAnalytics }}');
     </script>
 <!-- {{ template "_internal/google_analytics_async.html" . }} -->
-    {{ end }}
+    {{- end }}
 </head>
