make generated lines shorter

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,12 +1,10 @@
-{{ define "content" }}
+{{- define "content" }}
 <div class="application-main " data-commit-hovercards-enabled>
     <main id="js-pjax-container" data-pjax-container>
         <div class="container-xl clearfix px-3 mt-4">
-
-            {{ partial "user-profile.html" . }}
-
-            {{ partial "tags.html" . }}
+            {{- partial "user-profile.html" . }}
+            {{- partial "tags.html" . }}
 
     </main>
 </div>
-{{end }}
+{{- end }}
