--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -1,11 +1,9 @@
-{{ define "content" }}
+{{- define "content" }}
 <div class="application-main " data-commit-hovercards-enabled>
     <main id="js-pjax-container" data-pjax-container>
         <div class="container-xl clearfix px-3 mt-4">
-
-            {{ partial "user-profile.html" . }}
-
-            {{ partial "about.html" .}}
+            {{- partial "user-profile.html" . }}
+            {{- partial "about.html" .}}
     </main>
 </div>
-{{end }}
+{{- end }}
