--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,9 @@
-{{ define "content" }}
+{{- define "content" }}
 <div class="application-main " data-commit-hovercards-enabled>
     <main id="js-pjax-container" data-pjax-container>
         <div class="container-xl clearfix px-3 mt-4">
-
-            {{ partial "user-profile.html" . }}
-
-            {{ partial "posts.html" .}}
-
+            {{- partial "user-profile.html" . }}
+            {{- partial "posts.html" .}}
     </main>
 </div>
-{{ end }}
+{{- end }}
