eliminate the icon from recent posts

--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -41,11 +41,12 @@
                             class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
                             <div class="pinned-item-list-item-content" name="pinned-post">
                                 <div class="d-flex width-full flex-items-center position-relative">
+                                    <!--
                                     <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0" viewBox="0 0 12 16"
                                         version="1.1" width="12" height="16" aria-hidden="true">
                                         <path fill-rule="evenodd"
                                             d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
-                                    </svg>
+                                    </svg>-->
                                     <a href="{{ .Permalink }}" class="text-bold flex-auto min-width-0 ">
                                         <span class="repo js-pinnable-item" title="{{ .Title }}">{{ .Title }}</span>
                                     </a>
