modify calendar pages generation
- prepare dummy files for each year
e.g.) `calendar/2020.md`

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,3 +1,6 @@
+{{- if eq .Section "calendar" }}
+  {{- partial "calendar.html" . }}
+{{- else }}
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
 {{ partial "head.html" . }}
@@ -9,3 +12,4 @@
 </body>
 
 </html>
+{{- end }}
