--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -32,15 +32,7 @@
     <div class="position-relative">
         <div id="user-repositories-list">
             <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
-                {{- if eq "Posts" .CurrentSection.Title }}
-                    {{- $.Scratch.Set "paginator" (.Paginate (where $section ".Parent.Parent.Title" "Posts")) }}
-                {{- else }}
-                    {{- $.Scratch.Set "paginator" .Paginator }}
-                {{- end -}}
-
-                {{- $paginator := $.Scratch.Get "paginator" -}}
-
-                {{- range $paginator.Pages }}
+                {{- range .Paginator.Pages }}
                 <li class="post-item {{ .PublishDate.Format "2006-01-02" }} {{ .Lastmod.Format "2006-01-02" }} col-12 d-flex width-full py-4 border-bottom public fork">
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
@@ -71,17 +63,17 @@
                 </li>
                 {{ end }}
             </ul>
-            {{- if gt $paginator.TotalPages 1}}
+            {{- if gt .Paginator.TotalPages 1}}
             <div class="paginate-container">
                 <div class="BtnGroup" data-test-selector="pagination">
-                    {{- if $paginator.HasPrev }}
+                    {{- if .Paginator.HasPrev }}
                     <a rel="nofollow" class="btn btn-outline BtnGroup-item"
                         href="{{ .Paginator.Prev.URL }}">Previous</a>
                     {{- else }}
                     <button class="btn btn-outline BtnGroup-item" disabled="disabled">Previous</button>
                     {{- end }}
-                    {{- if $paginator.HasNext }}
-                    <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ $paginator.Next.URL }}">Next</a>
+                    {{- if .Paginator.HasNext }}
+                    <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ .Paginator.Next.URL }}">Next</a>
                     {{- else }}
                     <button class="btn btn-outline BtnGroup-item" disabled="disabled">Next</button>
                     {{- end }}
@@ -91,31 +83,3 @@
         </div>
     </div>
 </div>
-
-
-<script type="text/javascript">
-    function getQueryParam(key) {
-        const value = window.location.href.match(new RegExp("[?&]" + key + "=(.*?)(&|$|#)"));
-        if (value == null) return '';
-        return decodeURIComponent(value[1]);
-    }
-
-    function onLoad() {
-        const date = getQueryParam("date");
-        if (date == '') return;
-
-        // 日付指定がある場合、対象外の物を非表示にする
-        const posts = document.getElementsByClassName("post-item");
-        [...posts].forEach(post => {
-            if (!post.classList.contains(date)) {
-                post.parentNode.removeChild(post);
-            }
-        });
-        const container = document.getElementsByClassName("paginate-container");
-        [...container].forEach(c => {
-            c.parentNode.removeChild(c);
-        })
-    }
-
-    onLoad();
-</script>
