--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -61,12 +61,14 @@
                                 {{ .ReadingTime }} min -->
                             </div>
 
+                            {{- with .Site.Params.hugoRepository }}
+                            {{ $historyUrl := add (substr (printf "https://github.com/%s/%s/commits/master/content%s" $.Site.Params.github . $.RelPermalink) 0 -1) ".md" }}
                             <div class="d-flex py-1 py-md-0 flex-auto flex-order-1 flex-md-order-2 flex-sm-grow-0 flex-justify-between">
                                 <div class="BtnGroup">
-                                {{ $historyUrl := add (substr (printf "https://github.com/%s/hugo_files/commits/master/content%s" .Site.Params.github .RelPermalink) 0 -1) ".md" }}
                                 <a rel="nofollow" class="btn btn-sm BtnGroup-item" href="{{ $historyUrl }}">History</a>
                                 </div>
                             </div>
+                            {{- end }}
                         </div>
 
                         <div id="readme" class="Box-body readme blob instapaper_body js-code-block-container">
