add 'Archives' to menu
and separate the menu part into 'partials/menu.html'

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -3,8 +3,11 @@
     <main id="js-pjax-container" data-pjax-container>
         <div class="container-xl clearfix px-3 mt-4">
             {{- partial "user-profile.html" . }}
-            {{- partial "tags.html" . }}
-
+            {{- if eq .Title "Tags" }}
+                {{- partial "tags.html" . }}
+            {{- else if eq .Title "Archives" }}
+                {{- partial "archives.html" . }}
+            {{- end }}
     </main>
 </div>
 {{- end }}
