--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,10 +1,10 @@
 <!-- ページ上部メニュー部分 -->
 <div class="UnderlineNav width-full user-profile-nav js-sticky top-0">
-    <nav class="UnderlineNav-body" data-pjax aria-label="User profile">
-        <a aria-current="page" class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if eq .Path "" }}selected{{ end }}' href="{{ .Site.BaseURL }}">
+    <nav class="UnderlineNav-body">
+        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if eq .Path "" }}selected{{ end }}' href="{{ .Site.BaseURL }}">
             Overview
         </a>
-        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "posts" }}selected{{ end }}' href="{{ absURL "posts/" }}">
+        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "posts" }}selected{{ end }}' href='{{ absURL "posts/" }}'>
             Posts
             <span class="Counter hide-lg hide-md hide-sm">
                 {{- $mainSections := .Site.Params.mainSections | default (slice "post") }}
@@ -12,16 +12,16 @@
                 {{- len $section }}
             </span>
         </a>
-        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "tags" }}selected{{ end }}' href="{{ absURL "tags/" }}">
+        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "tags" }}selected{{ end }}' href='{{ absURL "tags/" }}'>
             Tags
             <span class="Counter hide-lg hide-md hide-sm">
                 {{ len .Site.Taxonomies.tags }}
             </span>
         </a>
-        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "archives" }}selected{{ end }}' href="{{ absURL "archives/" }}">
+        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if hasPrefix .Path "archives" }}selected{{ end }}' href='{{ absURL "archives/" }}'>
             Archives
         </a>
-        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if eq .Path "about.md" }}selected{{ end }}' href="{{ absURL "about/" }}">
+        <a class='UnderlineNav-item mr-0 mr-md-1 mr-lg-3 {{ if eq .Path "about.md" }}selected{{ end }}' href='{{ absURL "about/" }}'>
             About
         </a>
     </nav>
