--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -91,6 +91,12 @@
                     <img src="{{ "images/github.png" | absURL }}" class="avatar" width="35" height="35">
                 </a>
                 {{ end }}
+                {{ if .Site.Params.facebook}}
+                <a class="avatar-group-item" data-hovercard-type="organization"
+                    href="https://facebook.com/{{ .Site.Params.facebook }}">
+                    <img src="{{ "images/facebook.png" | absURL }}" class="avatar" width="35" height="35">
+                </a>
+                {{ end }}
                 {{ if .Site.Params.Twitter}}
                 <a class="avatar-group-item" data-hovercard-type="organization"
                     href="https://twitter.com/{{ .Site.Params.Twitter }}">
