--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,6 +28,7 @@
     {{- end }}
     {{- end }}
     <link rel="icon" type="image/x-icon" class="js-site-favicon" href='{{ "images/favicon.ico" | absURL }}'>
+    <link rel="shortcut icon" href='{{ "images/favicon.ico" | absURL }}'/>
     <meta name="theme-color" content="#1e2327">
 
     {{- if not .Site.IsServer }}
