--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,8 +27,8 @@
     <meta name="keywords" content="{{ . }}"/>
     {{- end }}
     {{- end }}
-    <link rel="icon" type="image/x-icon" class="js-site-favicon" href="favicon.ico">
-    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="icon" type="image/x-icon" class="js-site-favicon" href='{{ "/favicon.ico" | absURL }}'>
+    <link rel="shortcut icon" href='{{ "/favicon.ico" | absURL }}'/>
     <meta name="theme-color" content="#1e2327">
 
     {{- if not .Site.IsServer }}
