--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -94,7 +94,7 @@
                 {{ if .Site.Params.misskey}}
                 <a class="avatar-group-item" data-hovercard-type="organization"
                     href="{{ .Site.Params.misskey }}">
-                    <img src="{{ "images/Mi.png" | absURL }}" class="avatar" width="35" height="35">
+                    <img src="{{ "images/misskey.png" | absURL }}" class="avatar" width="35" height="35">
                 </a>
                 {{ end }}
                 {{ if .Site.Params.mastodon}}
