--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -27,7 +27,7 @@
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
                                 Modifyed <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
-                                    title="Modifyed  at {{ .Lastmod.Format "2006/01/02" }}">
+                                    title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
                         </h1>
