--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -26,7 +26,7 @@
                                     title="Created at {{ .PublishDate.Format "2006/01/02" }}">
                                     {{ .PublishDate.Format "2006-01-02" }}</time-ago>
                                 <span class="file-info-divider"></span>
-                                Modifyed <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
+                                Modified <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
                                     title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
                             </div>
