--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -29,6 +29,9 @@
                                 Modified <time-ago datetime="{{ .Lastmod.Format "2006-01-02" }}" class="no-wrap"
                                     title="Modified  at {{ .Lastmod.Format "2006/01/02" }}">
                                     {{ .Lastmod.Format "2006-01-02" }}</time-ago>
+                                <div class="tags">
+                                    Tags: {{ partial "tags.html" .}}
+                                </div>
                             </div>
                         </h1>
                     </div>
